--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
+	<meta property="og:title" content="La Panthère, agence de web design">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="img/agence-la-panthere.jpg">
+	<meta property="og:url" content="#">
+	<meta property="og:description" content="La Panthère, agence de web design qui aide les entreprise à devenir attractives basé à Lyon.">
+
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="#">
+	<meta name="twitter:title" content="La Panthère, agence de web design">
+	<meta name="twitter:description" content="La Panthère, agence de web design qui aide les entreprise à devenir attractives basé à Lyon.">
+	<meta name="twitter:image" content="img/agence-la-panthere.jpg">
+
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
@@ -18,7 +30,8 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>Contact</title>
+
+    <title>Agence La Panthère, page contact</title>
 
     
 <!-- Analytics -->
@@ -44,8 +57,6 @@
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
-					</li>
-					<li>
 					</li>
 					<li>
 						<a href="contact.html">Contact</a>
