modification format image

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
 
-    <title>Agence La Panthère, page contact</title>
+    <title>Agence La Panthère, contact</title>
 
     
 <!-- Analytics -->
