--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="keywords"
 		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-	<meta name="description" content="La Panthère, agence de web design qui aide les entreprise à devenir attractives basé à Lyon.">
+	<meta name="description"
+		content="La Panthère, agence de web design qui aide les entreprise à devenir attractives basé à Lyon.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -23,14 +24,14 @@
 		content="La Panthère, agence de web design qui aide les entreprise à devenir attractives basé à Lyon.">
 	<meta name="twitter:image" content="img/agence-la-panthere.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css"> 
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
 	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script> 
+	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
@@ -55,7 +56,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
-								alt="paris web design logo agence web meilleure agence" height="40" /></a>
+								alt="logo de l'agence LA Panthère" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -84,7 +85,7 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-							alt="Agence La Panthère" />
+							alt="logo Agence La Panthère" />
 						<h1 class="text-center hero-bloc-text tc-white">
 							Agence La Panthère
 						</h1>
@@ -143,16 +144,19 @@
 						</p>
 					</div>
 				</div>
-				<p class="text-center">L'agence La Panthère est une excellente agence web !
-					<br>
-					Les web designers ont réussi à capturer l'essence
-					<br>
-					de notre entreprise et à l'intégrer à notre site.
-					<br>
-					Cela nous a aider à doubler nos ventes en ligne à Lyon.
-				</p>
-				<p class="text-center">Maxime Guibard, PDG de À vos fourchettes</p>
-
+				<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+					<blockquote>
+						<p class="text-center">L'agence La Panthère est une excellente agence web !
+							<br>
+							Les web designers ont réussi à capturer l'essence
+							<br>
+							de notre entreprise et à l'intégrer à notre site.
+							<br>
+							Cela nous a aider à doubler nos ventes en ligne à Lyon.
+						</p>
+					</blockquote>
+					<p class="text-center">Maxime Guibard, PDG de À vos fourchettes</p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -194,7 +198,7 @@
 				<div class="col-sm-6">
 					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-						<img src="img/1.jpg" alt="Refonte site web journal"
+						<img src="img/1.jpg" alt="Refonte d'un site web pour un journal"
 							class="img-responsive portfolio-thumb" /></a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
@@ -234,7 +238,7 @@
 					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
 						<img src="img/4.jpg" class="img-responsive portfolio-thumb"
-							alt="Création d'un site web pour agence de mariage" /></a>
+							alt="Création d'un site web pour une agence de mariage" /></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
