--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
-					<p class="text-center">L'agence La Panthère est une agence de web design qui aide les entreprises à
-						devenir attractives et visibles sur Internet.</p>
+					<div class="col-sm-12 text-center">
+						<h2>L'agence La Panthère est une agence de web design qui aide les entreprises à
+							devenir attractives et visibles sur Internet.</h2>
+					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
@@ -190,10 +192,12 @@
 	<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 		<div class="container bloc-lg">
 			<div class="row">
-
-				<p class="text-center">Nous travaillons avec beaucoup de clients, voici nos réalisations.</p>
-
+				<div class="col-sm-6 text-center">
+					<h2>Nous travaillons avec beaucoup de clients,
+						 voici nos réalisations.</h2>
+				</div>
 			</div>
+
 			<div class="row tight-width-whitespace portfolio-row">
 				<div class="col-sm-6">
 					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
@@ -272,7 +276,7 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">
+					<p class="text-center">
 						Agence La Panthère - Agence web basée à Lyon.<br>
 					</p>
 					<div class="row row-no-gutters social">
