--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
 	<meta name="twitter:description" content="La Panthère, agence de web design qui aide les entreprise à devenir attractives basé à Lyon.">
 	<meta name="twitter:image" content="img/agence-la-panthere.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
 	<script src="./js/jquery-2.1.0.js"></script>
@@ -93,16 +93,16 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
-						<label for="name">Nom</label>
-						<input id="name" class="form-control" required />
+						<label for="name">Nom</label><br>
+						<input id="name" class="form-control" required>
 					</div>
 					<div class="form-group">
-						<label for="email">Adresse email</label>
-						<input id="email" class="form-control" type="email" required />
+						<label for="email">Adresse email</label><br>
+						<input id="email" class="form-control" type="email" required>
 					</div>
 					<div class="form-group">
-						<label for="know-us">Comment nous avez-vous connu ?</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<label for="know-us">Comment nous avez-vous connu ?</label><br>
+						<input class="form-control" type="email" required id="input_504">
 					</div>
 					<div class="form-group">
 						<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>	
@@ -115,7 +115,8 @@
 			</div>
 			<div class="col-sm-6">
 				<p>
-					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+					<a href="contact@agencelapanthere.com">contact@agencelapanthere.com</a>
 				</p>
 			</div>
 		</div>
