--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
-								alt="logo de l'agence LA Panthère" height="40" /></a>
+								alt="logo de l'agence LA Panthère" height="40"></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -85,7 +85,7 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-							alt="logo Agence La Panthère" />
+							alt="logo Agence La Panthère">
 						<h1 class="text-center hero-bloc-text tc-white">
 							Agence La Panthère
 						</h1>
@@ -194,7 +194,7 @@
 			<div class="row">
 				<div class="col-sm-12 text-center">
 					<h2>Nous travaillons avec beaucoup de clients,
-						 voici nos réalisations.</h2>
+						voici nos réalisations.</h2>
 				</div>
 			</div>
 
@@ -203,7 +203,7 @@
 					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
 						<img src="img/1.jpg" alt="Refonte d'un site web pour un journal"
-							class="img-responsive portfolio-thumb" /></a>
+							class="img-responsive portfolio-thumb"></a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
 					</h3>
@@ -215,7 +215,7 @@
 					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 						<img src="img/2.jpg" class="img-responsive portfolio-thumb"
-							alt="Création d'un site web pour photographes" /></a>
+							alt="Création d'un site web pour photographes"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h3>
@@ -229,7 +229,7 @@
 					<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
 						<img src="img/3.jpg" class="img-responsive portfolio-thumb"
-							alt="Création d'un site web pour voyageur" /></a>
+							alt="Création d'un site web pour voyageur"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h3>
@@ -242,7 +242,7 @@
 					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
 						<img src="img/4.jpg" class="img-responsive portfolio-thumb"
-							alt="Création d'un site web pour une agence de mariage" /></a>
+							alt="Création d'un site web pour une agence de mariage"></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
@@ -307,7 +307,7 @@
 	</div>
 	<!-- Footer - bloc-8 END -->
 
-	</div>
+	
 	<!-- Principal conteneur END -->
 
 
