--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<!-- <script src="./js/jquery-2.1.0.js"></script> -->
+	<!--<script src="./js/bootstrap.js"></script> -->
+	<!--<script src="./js/blocs.js"></script> -->
+	<!--<script src="./js/jquery.touchSwipe.js" defer></script> -->
+	<!-- <script src="./js/gmaps.js"></script> -->
 
 	<title>La Panthère, agence de web design à Lyon</title>
 
@@ -179,7 +179,8 @@
 						besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin
 						d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter.
 						Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement
-						trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
+						trouvable sur les moteurs de recherche. <br><br>
+						<a class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 							href="contact.html">Contactez notre équipe</a><br>
 					</p>
 				</div>
