--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
 	
     
 	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>
+	<!-- <script src="./js/bootstrap.js"></script> -->
+	<!-- <script src="./js/blocs.js"></script> -->
+	<!-- <script src="./js/jqBootstrapValidation.js"></script> -->
+	<!-- <script src="./js/formHandler.js"></script> -->
 
     <title>Agence La Panthère, contact</title>
 
@@ -94,19 +94,19 @@
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label for="name">Nom</label><br>
-						<input id="name" class="form-control" required>
+						<input id="name" class="form-control" required placeholder="Nom Prénom">
 					</div>
 					<div class="form-group">
 						<label for="email">Adresse email</label><br>
-						<input id="email" class="form-control" type="email" required>
+						<input id="email" class="form-control" type="email" required placeholder="votreadressemail@exemple.com">
 					</div>
 					<div class="form-group">
 						<label for="know-us">Comment nous avez-vous connu ?</label><br>
-						<input class="form-control" type="email" required id="input_504">
+						<input class="form-control" type="email" required id="input_504" placeholder="Recherche internet - Publicité - autres">
 					</div>
 					<div class="form-group">
 						<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>	
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label><textarea id="message" class="form-control" rows="4" cols="50" required ></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
