--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
-	<!-- <script src="./js/jquery-2.1.0.js"></script> -->
-	<!--<script src="./js/bootstrap.js"></script> -->
-	<!--<script src="./js/blocs.js"></script> -->
-	<!--<script src="./js/jquery.touchSwipe.js" defer></script> -->
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<!-- <script src="./js/blocs.js"></script> -->
+	<!-- <script src="./js/jquery.touchSwipe.js" defer></script> -->
 	<!-- <script src="./js/gmaps.js"></script> -->
 
 	<title>La Panthère, agence de web design à Lyon</title>
@@ -103,10 +103,10 @@
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
-					<div class="col-sm-12 text-center">
-						<h2>L'agence La Panthère est une agence de web design qui aide les entreprises à
+					 <div class="col-sm-12 text-center">
+						<h2>L'agence La Panthère est une agence de web design qui aide <br> les entreprises à
 							devenir attractives et visibles sur Internet.</h2>
-					</div>
+					</div> 
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
@@ -193,14 +193,14 @@
 	<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 		<div class="container bloc-lg">
 			<div class="row">
-				<div class="col-sm-12 text-center">
+			<div class="col-sm-12 text-center">
 					<h2>Nous travaillons avec beaucoup de clients,
 						voici nos réalisations.</h2>
-				</div>
+				</div> 
 			</div>
 
 			<div class="row tight-width-whitespace portfolio-row">
-				<div class="col-sm-6">
+				<div class="col-sm-6 div-center">
 					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
 						<img src="img/1.jpg" alt="Refonte d'un site web pour un journal"
@@ -212,7 +212,7 @@
 						Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 					</p>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-6 div-center">
 					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 						<img src="img/2.jpg" class="img-responsive portfolio-thumb"
@@ -226,7 +226,7 @@
 				</div>
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
-				<div class="col-sm-6">
+				<div class="col-sm-6 div-center">
 					<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 						data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
 						<img src="img/3.jpg" class="img-responsive portfolio-thumb"
@@ -239,7 +239,7 @@
 						articles de ce voyageur.
 					</p>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-6 div-center">
 					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
 						<img src="img/4.jpg" class="img-responsive portfolio-thumb"
@@ -280,7 +280,7 @@
 					<p class="text-center">
 						Agence La Panthère - Agence web basée à Lyon.<br>
 					</p>
-					<div class="row row-no-gutters social">
+					<div class="row row-no-gutters social row-social">
 						<div class="col-sm-3">
 							<div class="text-center">
 								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
