--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
@@ -48,7 +48,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -91,7 +91,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form method="post" id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label for="name">Nom</label><br>
 						<input id="name" class="form-control" required placeholder="Nom Prénom">
@@ -101,7 +101,7 @@
 						<input id="email" class="form-control" type="email" required placeholder="votreadressemail@exemple.com">
 					</div>
 					<div class="form-group">
-						<label for="know-us">Comment nous avez-vous connu ?</label><br>
+						<label for="know">Comment nous avez-vous connu ?</label><br>
 						<input class="form-control" type="email" required id="input_504" placeholder="Recherche internet - Publicité - autres">
 					</div>
 					<div class="form-group">
