--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form action="./includes/form_1.php" method="post" id="form_1">
 					<div class="form-group">
 						<label for="name">Nom</label><br>
 						<input id="name" class="form-control" required placeholder="Nom Prénom">
@@ -102,7 +102,7 @@
 					</div>
 					<div class="form-group">
 						<label for="know">Comment nous avez-vous connu ?</label><br>
-						<input id="know" class="form-control" type="email" required id="input_504" placeholder="Internet - Publicité - Contact - Autres">
+						<input class="form-control" type="email" required id="input_504" placeholder="Internet - Publicité - Contact - Autres">
 					</div>
 					<div class="form-group">
 						<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>	
