--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 					</div>
 					<div class="form-group">
 						<label for="know">Comment nous avez-vous connu ?</label><br>
-						<input class="form-control" type="email" required id="input_504" placeholder="Internet - Publicité - Contact - Autres">
+						<input id="know" class="form-control" type="email" required placeholder="Internet - Publicité - Contact - Autres">
 					</div>
 					<div class="form-group">
 						<label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>	
