--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,8 @@
     
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
-	<!-- <script src="./js/blocs.js"></script> -->
-	<!-- <script src="./js/jqBootstrapValidation.js"></script> -->
-	<!-- <script src="./js/formHandler.js"></script> -->
-
+	<script src="./js/blocs.js"></script>
+	
     <title>Agence La Panthère, contact</title>
 
     
@@ -137,7 +135,7 @@
 				<p class="text-center">
 					Agence La Panthère - Agence web basée à Lyon.<br>
 				</p>
-				<div class="row row-no-gutters social">
+				<div class="row row-no-gutters social row-social">
 					<div class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
