--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
-	<!-- <script src="./js/jquery-2.1.0.js"></script> -->
+	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
-	<!-- <script src="./js/blocs.js"></script> -->
-	<!-- <script src="./js/jquery.touchSwipe.js" defer></script> -->
-	<!-- <script src="./js/gmaps.js"></script> -->
-
+	<script src="./js/blocs.js"></script>
+	
 	<title>La Panthère, agence de web design à Lyon</title>
 
 
